Fix contrast on buttons plus a bit extra stuff

--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ h2 {
   cursor: pointer;
   border: none;
   background: none;
-  color: #a0a8b0;
+  color: #454b50;
   font-size: 1.6em;
   line-height: 2.4em;
   margin-top: 0.5em;
